# chat-invest

./: .gitignore  .gitmodules  pyproject.toml
example/: scrape.py
src/chat_invest/: app.py
src/chat_invest/ui/: Home.py
src/chat_invest/ui/pages/: 0_Test.py  1_🌎_Web_Discussions.py  2_📈_Technical_Chart.py  3_🔨_Build_Strategy.py
src/chat_invest/web/: browser_manager.py  navigate.py  scraper.py
src/chat_invest/web/sites/: youtube.py
