[tool.poetry]
name = "chat-invest"
version = "0.1.0"
description = ""
authors = ["WcW <1754835+w121211@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "chat_invest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
