[tool.poetry]
name = "chat-invest"
version = "0.1.0"
description = ""
authors = ["WcW <1754835+w121211@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "chat_invest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
yfinance = "^0.2.40"
watchdog = "^4.0.1"
pytest-playwright = "^0.5.0"
playwright = "^1.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
